--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>OOPS task</title>
 </head>
 <body>
-    <script src = "Oops.js"></script>
+    <script src = "scripts.js"></script>
 </body>
 </html>
